fix momentary flashing of horizontal scrollbar when hovering a long tab list

--- a/src/tabcenter.css
+++ b/src/tabcenter.css
@@ -213,6 +213,10 @@ img, .tab *:not(.clickable) {
     overflow-y: auto;
 }
 
+#tablist {
+    overflow-x: hidden;
+}
+
 .tab {
     display: flex;
     align-items: center;
